--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.4
 info:
   title: Reports
   version: v1.0-beta
@@ -1377,7 +1377,6 @@ paths:
       tags:
         - deviceManagement.deviceManagementReports
       summary: Get reports from deviceManagement
-      description: Reports singleton
       operationId: deviceManagement_GetReport
       parameters:
         - name: $select
@@ -6820,6 +6819,109 @@ paths:
                 filter:
                   type: string
                   nullable: true
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/octet-stream:
+              schema:
+                type: object
+                properties:
+                  value:
+                    type: string
+                    format: base64url
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
+  /deviceManagement/reports/microsoft.graph.retrieveCloudPkiLeafCertificateReport:
+    post:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Invoke action retrieveCloudPkiLeafCertificateReport
+      operationId: deviceManagement.report_retrieveCloudPkiLeafCertificateReport
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                certificationAuthorityId:
+                  type: string
+                  nullable: true
+                top:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: number
+                  format: int32
+                skip:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: number
+                  format: int32
+                select:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                filter:
+                  type: string
+                  nullable: true
+                search:
+                  type: string
+                  nullable: true
+                orderBy:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/octet-stream:
+              schema:
+                type: object
+                properties:
+                  value:
+                    type: string
+                    format: base64url
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
+  /deviceManagement/reports/microsoft.graph.retrieveCloudPkiLeafCertificateSummaryReport:
+    post:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Invoke action retrieveCloudPkiLeafCertificateSummaryReport
+      operationId: deviceManagement.report_retrieveCloudPkiLeafCertificateSummaryReport
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                certificationAuthorityId:
+                  type: string
+                  nullable: true
+                select:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
               additionalProperties:
                 type: object
         required: true
@@ -21307,6 +21409,10 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.appliedAuthenticationEventListener'
               description: 'Detailed information about the listeners, such as Azure Logic Apps and Azure Functions, which the corresponding events in the sign-in event triggered.'
+            appOwnerTenantId:
+              type: string
+              description: The identifier of the tenant that owns the client application.  Supports $filter (eq).
+              nullable: true
             appTokenProtectionStatus:
               $ref: '#/components/schemas/microsoft.graph.tokenProtectionStatus'
             authenticationAppDeviceDetails:
@@ -21368,7 +21474,8 @@ components:
             conditionalAccessAudiences:
               type: array
               items:
-                $ref: '#/components/schemas/microsoft.graph.conditionalAccessAudience'
+                type: string
+                nullable: true
               description: A list that indicates the audience that Conditional Access evaluated during a sign-in event.  Supports $filter (eq).
             conditionalAccessStatus:
               $ref: '#/components/schemas/microsoft.graph.conditionalAccessStatus'
@@ -21461,6 +21568,10 @@ components:
               type: string
               description: The identifier of the resource that the user signed in to.  Supports $filter (eq).
               nullable: true
+            resourceOwnerTenantId:
+              type: string
+              description: The identifier of the owner of the resource.  Supports $filter (eq).
+              nullable: true
             resourceServicePrincipalId:
               type: string
               description: The identifier of the service principal representing the target resource in the sign-in event.
@@ -21512,7 +21623,7 @@ components:
               items:
                 type: string
                 nullable: true
-              description: 'Indicates the category of sign in that the event represents. For user sign ins, the category can be interactiveUser or nonInteractiveUser and corresponds to the value for the isInteractive property on the signin resource. For managed identity sign ins, the category is managedIdentity. For service principal sign-ins, the category is servicePrincipal. Possible values are: interactiveUser, nonInteractiveUser, servicePrincipal, managedIdentity, unknownFutureValue.  Supports $filter (eq, ne).'
+              description: 'Indicates the category of sign in that the event represents. For user sign ins, the category can be interactiveUser or nonInteractiveUser and corresponds to the value for the isInteractive property on the signin resource. For managed identity sign ins, the category is managedIdentity. For service principal sign-ins, the category is servicePrincipal. Possible values are: interactiveUser, nonInteractiveUser, servicePrincipal, managedIdentity, unknownFutureValue.  Supports $filter (eq, ne). NOTE: Only interactive sign-ins are returned unless you set an explicit filter. For example, the filter for getting non-interactive sign-ins is https://graph.microsoft.com/beta/auditLogs/signIns?&$filter=signInEventTypes/any(t: t eq ''nonInteractiveUser'').'
             signInIdentifier:
               type: string
               description: 'The identification that the user provided to sign in. It can be the userPrincipalName, but is also populated when a user signs in using other identifiers.'
@@ -21608,7 +21719,6 @@ components:
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
-          description: Singleton entity that acts as a container for all reports functionality.
     microsoft.graph.deviceManagementCachedReportConfiguration:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -23772,11 +23882,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: Contains the name of the field that a value is associated with.
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key.
           nullable: true
       additionalProperties:
         type: object
@@ -24127,18 +24237,6 @@ components:
         - certificate
         - unknownFutureValue
       type: string
-    microsoft.graph.conditionalAccessAudience:
-      title: conditionalAccessAudience
-      type: object
-      properties:
-        applicationId:
-          type: string
-          description: The ID of the application.
-          nullable: true
-        audienceReasons:
-          $ref: '#/components/schemas/microsoft.graph.conditionalAccessAudienceReason'
-      additionalProperties:
-        type: object
     microsoft.graph.conditionalAccessStatus:
       title: conditionalAccessStatus
       enum:
@@ -24592,7 +24690,7 @@ components:
         lastSuccessfulSignInDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
-          description: 'The date and time of the user''s most recent successful sign-in activity. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+          description: 'The date and time of the user''s most recent successful interactive or non-interactive sign-in. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
           format: date-time
           nullable: true
         lastSuccessfulSignInRequestId:
@@ -25512,11 +25610,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
@@ -25728,24 +25826,6 @@ components:
         - scopeBasedAuthRequirementPolicy
         - authenticationStrengths
       type: string
-    microsoft.graph.conditionalAccessAudienceReason:
-      title: conditionalAccessAudienceReason
-      enum:
-        - none
-        - resourcelessRequest
-        - confidentialClientIdToken
-        - confidentialClientNonIdToken
-        - resourceMapping
-        - resourceMappingDefault
-        - scopeMapping
-        - scopeMappingDefault
-        - delegatedScope
-        - firstPartyResourceDefault
-        - thirdPartyResourceDefault
-        - unknownFutureValue
-      type: string
-      x-ms-enum-flags:
-        isFlags: true
     microsoft.graph.geoCoordinates:
       title: geoCoordinates
       type: object
