--- a/openApiDocs/beta/Bookings.yml
+++ b/openApiDocs/beta/Bookings.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.4
 info:
   title: Bookings
   version: v1.0-beta
@@ -12802,6 +12802,9 @@ components:
               $ref: '#/components/schemas/microsoft.graph.dateTimeTimeZone'
             startDateTime:
               $ref: '#/components/schemas/microsoft.graph.dateTimeTimeZone'
+            videoOnDemandWebUrl:
+              type: string
+              nullable: true
             presenters:
               type: array
               items:
@@ -12925,6 +12928,9 @@ components:
             preferredTimezone:
               type: string
               description: The registrant's time zone details.
+              nullable: true
+            registrantVideoOnDemandWebUrl:
+              type: string
               nullable: true
             registrationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
@@ -13679,6 +13685,10 @@ components:
               type: boolean
               description: Indicates whether breakout rooms are enabled for the meeting.
               nullable: true
+            allowCopyingAndSharingMeetingContent:
+              type: boolean
+              description: Indicates whether copying and sharing meeting content is enabled for the meeting.
+              nullable: true
             allowedLobbyAdmitters:
               $ref: '#/components/schemas/microsoft.graph.allowedLobbyAdmitterRoles'
             allowedPresenters:
@@ -13724,6 +13734,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.chatRestrictions'
             isEndToEndEncryptionEnabled:
               type: boolean
+              description: Indicates whether end-to-end encryption (E2EE) is enabled for the online meeting.
               nullable: true
             isEntryExitAnnounced:
               type: boolean
@@ -14675,6 +14686,8 @@ components:
               type: string
               description: The unique identifier of the protection policy based on which protection unit was created.
               nullable: true
+            protectionSources:
+              $ref: '#/components/schemas/microsoft.graph.protectionSource'
             status:
               $ref: '#/components/schemas/microsoft.graph.protectionUnitStatus'
           additionalProperties:
@@ -15273,7 +15286,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.publicError'
             isAutoApplyEnabled:
               type: boolean
-              description: 'true indicates that the protection rule is dynamic; false that it''s static. Currently, only static rules are supported.'
+              description: true indicates that the protection rule is dynamic; false that it's static.
               nullable: true
             lastModifiedBy:
               $ref: '#/components/schemas/microsoft.graph.identitySet'
@@ -15456,6 +15469,16 @@ components:
         - active
         - unknownFutureValue
       type: string
+    microsoft.graph.protectionSource:
+      title: protectionSource
+      enum:
+        - none
+        - manual
+        - dynamicRule
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.protectionUnitStatus:
       title: protectionUnitStatus
       enum:
@@ -15726,6 +15749,8 @@ components:
         - completed
         - completedWithErrors
         - unknownFutureValue
+        - updateRequested
+        - deleteRequested
       type: string
     microsoft.graph.protectionUnitsBulkJobStatus:
       title: protectionUnitsBulkJobStatus
@@ -16390,6 +16415,10 @@ components:
             publicationId:
               type: string
               description: The identifier of the publication. Read-only.
+              nullable: true
+            publicationName:
+              type: string
+              description: The name of the published task list. Read-only.
               nullable: true
             publishedToPlanId:
               type: string
