--- a/openApiDocs/beta/BusinessScenario.yml
+++ b/openApiDocs/beta/BusinessScenario.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.4
 info:
   title: BusinessScenario
   version: v1.0-beta
@@ -2606,6 +2606,10 @@ components:
             publicationId:
               type: string
               description: The identifier of the publication. Read-only.
+              nullable: true
+            publicationName:
+              type: string
+              description: The name of the published task list. Read-only.
               nullable: true
             publishedToPlanId:
               type: string
